--- a/client/src/my/sheeponthetable/gui/SheepPanel.form
+++ b/client/src/my/sheeponthetable/gui/SheepPanel.form
@@ -415,7 +415,7 @@
         <Component class="javax.swing.JList" name="sheepUpdateJList">
           <Properties>
             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="sheepShow" type="code"/>
+              <Connection code="sheepUpdatesShow" type="code"/>
             </Property>
           </Properties>
         </Component>
